# pytest_proj1

./: .gitignore  pyproject.toml
tests/: test_arrs.py  test_dicts.py
utils/: dicts.py
